# AudioAnecdotes

Content/: Makefile.in  config.mak  configure.in  dist.make.dirs  make.dirs  manifest
Content/01Measurement/: make.dirs  manifest
Content/01Measurement/1Greenebaum/: Makefile.in  amplitudeRamp.c  manifest
Content/02Perception/: make.dirs  manifest
Content/02Perception/2DiFillipo/: Makefile.in  clickfusion.c  manifest  sidetone.c
Content/04Synthesis/: make.dirs  manifest
Content/04Synthesis/1Thiel/: FilteredNoise3.c  Makefile.in  RockGuitar.c  manifest  multi2.c  pa_multiwave.c
Content/04Synthesis/2Cook/: Makefile.in  clarinet.c  config.mak  mandolin.c  manifest  mass_spring.c  string.c
Content/05SignalProcessing/: make.dirs  manifest
Content/05SignalProcessing/1Malvar/: Makefile.in  amproc.m  hthres.m  manifest  sineMask.c  sineMaski.c  thrabs.m
Content/05SignalProcessing/3Luna/: BaseBandDemodulate.cpp  BaseBandDemodulate.h  FormatSource.h  GnuplotDriver.h  Makefile  Makefile.in  channel.cpp  config.mak  demodulator.cpp  make.dirs  makefile.ben  makefile.w32  manifest  modem.cpp  modulator.cpp  readme
Content/05SignalProcessing/3Luna/include/: AWGNChannel.h  BaseBandDemodulate.h  BaseBandModulate.h  FormatSink.h  FormatSource.h  GnuplotDriver.h  PulseModulate.h  system.h
Content/05SignalProcessing/3Luna/lib/: AWGNChannel.cpp  AWGNChannel.h  BaseBandModulate.cpp  BaseBandModulate.h  FormatSink.cpp  FormatSink.h  FormatSource.cpp  GnuplotDriver.cpp  GnuplotDriver.h  Makefile.in  PulseModulate.cpp  PulseModulate.h  config.mak  manifest  system.h
Content/05SignalProcessing/3Luna/mono/: Makefile.in  config.mak  manifest  modem.cpp
Content/05SignalProcessing/3Luna/mono/data/: manifest
Content/05SignalProcessing/3Luna/poly/: Makefile.in  config.mak  demodulator.cpp  float_data  int_data  manifest  modulator.cpp  readme  short_data
Content/06ComputerTechniques/: make.dirs  manifest
Content/06ComputerTechniques/1Greenebaum-API/: Makefile.in  makewave  manifest  passthru-wav.c  passthru.c
Content/06ComputerTechniques/2Greenebaum-Test/: Makefile.in  manifest  rampdata2  rampdata3  rampout.c  ramptest.c
Content/06ComputerTechniques/3Greenebaum-Files/: Makefile.in  au_snd_format.txt  manifest  play.cpp  test.aifc  test.aiff  test.au
Content/06ComputerTechniques/3Greenebaum-Files/FL/: aiff.fl  au.fl  audio.fl  raw.fl  wav.fl
Content/07ComputerTools/: config.mak  make.dirs  manifest
Content/07ComputerTools/1Rutschman/: .octaverc  Makefile  Makefile.in  clip.m  compare.m  deltamod.m  do_output.m  dsm.m  filtcompare.m  floatdata.hdf5  floatdata.txt  holes.m  makesamples.m  manifest  plotspec.m  preview.html  pwm.m  pwm2.m  quantize.m  readdoubles.m  readraw.m  readshorts.m  span.m  tone.m  unbias.m
Content/07ComputerTools/2Greenebaum-PABLIO/: Makefile.in  Makefile.win32  config.mak  manifest  passthru.c  passthru_simple.c  sine.c  sine_simple.c
Content/07ComputerTools/4Eleftheriadis/: Makefile.in  data_packing.c  hellobits.c  manifest  snippets.c
Content2/: dist.make.dirs  make.dirs  manifest
Content2/02Synthesis/: manifest
Content2/02Synthesis/1Fouad/: Makefile.in  manifest  rsf.cpp  seagull.raw  surf.raw  wave.raw
Content2/02Synthesis/1Fouad-RSF/: rsf.c
Content2/02Synthesis/2Burk/: Makefile.in  manifest  pa_multiwave.c
Content2/02Synthesis/2Burk-MWT/: manifest  pa_multiwave.c
Content2/03SignalProcessing/: make.dirs  manifest
Content2/03SignalProcessing/1Allman-FIR/: Makefile.in  README  coefs.txt  fir.c  fir2.cpp  manifest
Content2/03SignalProcessing/2Allman-IIR/: Makefile.in  coeffs.txt  coefs.txt  iir.c  iir2.cpp  manifest  samples.txt
Content2/03SignalProcessing/4Chamberlin-FP_FFT/: Makefile.in  fp_fft.c  fp_fft2.cpp  manifest
Content2/03SignalProcessing/5Chamberlin-IM_FFT/: Makefile.in  im_fft.c  manifest
Content2/04Spatialization/: make.dirs  manifest
Content2/04Spatialization/1Fouad/: Makefile.in  manifest  spatialization.c
Content2/04Spatialization/2Pulkki/: vbap.c  (+9 more)
Content2/05ComputerTechniques/: make.dirs  manifest
Content2/06ComputerTools/: config.mak  make.dirs  manifest
Content2/07MusicTheory/: make.dirs  manifest
Content2/09Nature/: make.dirs  manifest
Content2/media/: Makefile.in  config.mak  manifest  thought.raw
Content3/: dist.make.dirs  make.dirs  manifest
Content3/01RecordingMusic/: manifest
Content3/02SoundSynthesis/: make.dirs  manifest
Content3/03VoiceSynthesis/: manifest
Content3/04SpeechProcessing/: Makefile  make.dirs  manifest
Content3/05SignalProcessing/: Makefile.in  config.mak  make.dirs  manifest
Content3/06Spatialization/: make.dirs  manifest
Content3/07Synchronization/: make.dirs  manifest
Content3/08MusicComposition/: make.dirs  manifest
Content3/09HumanExperience/: config.mak  make.dirs  manifest
docs/: Makefile  autopackage_email.txt  cd_installation.doc  development_plan.txt  intro_email.txt
docs/html/: 01Measurement.html  02Perception.html  03Recording.html  04Synthesis.html  05SignalProcessing.html  06ComputerTechniques.html  07ComputerTools.html  08HumanExperience.html  Makefile  Makefile.in  build.html  caliper.html  config.mak  contacts.html  do.cgi  head.html  kill.cgi  linux-do.cgi  linuxkill.cgi  mac-do.cgi  mackill.cgi  main.html  manifest  menu.html  rampdata1.bat  rampdata1.sh  rampdata2.bat  rampdata2.sh  rampdata3.bat  rampdata3.sh  rampout.bat  rampout.sh  update.html  win-do.cgi  windowskill.cgi
docs/html2/: 01FieldRecording.html  02Synthesis.html  03SignalProcessing.html  04Spatialization.html  05ComputerTechniques.html  06ComputerTools.html  07MusicTheory.html  08SoundDesign.html  09Nature.html  Makefile  demo  demo.bat  demo2.bat  fir  fir.bat  fp_fft  fp_fft.bat  ifir  ifir.bat  iiir  iiir.bat  iir  iir.bat  manifest  menu.html  nofir  nofir.bat  sox  sox.bat
docs/html3/: 01RecordingMusic.html  02SoundSynthesis.html  03VoiceSynthesis.html  04SpeechProcessing.html  05SignalProcessing.html  06Spatialization.html  07Synchronization.html  08MusicComposition.html  09HumanExperience.html  Makefile  acknowledgements.html  manifest  menu.html
(+267 files in other folders)
